[package]
name = "choomd"
version = "0.1.0"
authors = ["futpib"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
humantime = "2.1.0"
procfs = { git = "https://github.com/futpib/procfs.git", version = "0.16.0", branch = "oom_score_adj" }
toml = { version = "0.8.8", features = [ "parse" ], default-features = false }
users = { version = "0.11.0", default-features = false }
