[package]
name = "choomd"
version = "1.0.1"
authors = ["futpib"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = [ "std", "derive", "help" ], default-features = false }
env_logger = { version = "0.10.1", default-features = false }
glob = { version = "0.3.1", default-features = false }
humantime = { version = "2.1.0", default-features = false }
log = { version = "0.4.20", default-features = false }
procfs = { git = "https://github.com/futpib/procfs.git", version = "0.16.0", branch = "oom_score_adj", default-features = false }
toml = { version = "0.8.8", features = [ "parse", "preserve_order" ], default-features = false }
users = { version = "0.11.0", default-features = false }
